--- a/pyttcl.ini
+++ b/pyttcl.ini
@@ -1,5 +1,5 @@
 [settings]
-language = eng
+language = rus
 nickname = Amir (pyttcl)
 
 [hotkey]
@@ -8,7 +8,6 @@ disconnect = shift+f2
 get_user_info = ctrl+i
 get_channel_info = ctrl+i
 user_msg = ctrl+m
-
 get_help = f1
 
 [data]
@@ -31,3 +30,4 @@ username = admin
 password = GAEadmin13
 channel = Issues/connecting
 channel_password = Nastya
+
