change file: TeamTalk5.(py, dll); add function for changing nickname

--- a/pyttcl.ini
+++ b/pyttcl.ini
@@ -5,10 +5,13 @@ nickname = Amir (pyttcl)
 [hotkey]
 connect = f2
 disconnect = shift+f2
-get_user_info = ctrl+i
-get_channel_info = ctrl+i
-user_msg = ctrl+m
+get_user_info = alt+i
+get_channel_info = alt+i
+channel_msg = alt+m
+user_msg = alt+m
 get_help = f1
+connect_to_channel = ctrl+shift+c
+change_nickname = alt+n
 
 [data]
 servers_list = "мир общения", "мой сервак"
