--- a/pyttcl.ini
+++ b/pyttcl.ini
@@ -10,20 +10,12 @@ get_channel_info = alt+i
 channel_msg = alt+m
 user_msg = alt+m
 get_help = f1
-connect_to_channel = ctrl+shift+c
+connect_to_channel = alt+c
 change_nickname = alt+n
+voice_activation = ctrl+shift+a
 
 [data]
-servers_list = "мир общения", "мой сервак"
-
-[мир общения]
-host = 195.133.32.39
-tcpport = 10338
-udpport = 10338
-username = 89872191235
-password = qwertyuiop82
-channel = На солнечной полянке
-channel_password = 
+servers_list = "мой сервак", "мир общения"
 
 [мой сервак]
 host = gumerov-amir.sytes.net
@@ -33,4 +25,13 @@ username = admin
 password = GAEadmin13
 channel = Issues/connecting
 channel_password = Nastya
+
+[мир общения]
+host = worldtalk.sytes.net
+tcpport = 10338
+udpport = 10338
+username = 89872191235
+password = qwertyuiop82
+channel = 
+channel_password = 
 
