--- a/pyttcl.ini
+++ b/pyttcl.ini
@@ -18,11 +18,11 @@ voice_activation = ctrl+shift+a
 servers_list = "мой сервак", "мир общения"
 
 [мой сервак]
-host = gumerov-amir.sytes.net
+host = 192.168.1.71
 tcpport = 10333
 udpport = 10333
 username = admin
-password = GAEadmin13
+password = admin
 channel = Issues/connecting
 channel_password = Nastya
 
@@ -34,4 +34,3 @@ username = 89872191235
 password = qwertyuiop82
 channel = 
 channel_password = 
-
